# python-contexts

./: .gitignore  LICENSE  pyproject.toml
contexts/: __init__.py
pycontexts/: __init__.py  context.py
tests/: __init__.py  test_contexts.py
