[tool.poetry]
name = "pycontexts"
version = "0.1.4"
description = ""
authors = ["jack <jack@gallabytes.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
"keyrings.google-artifactregistry-auth" = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "midjourney"
url = "https://us-python.pkg.dev/midjourney-tpu/pipjourney-us/simple/"
secondary = true

